cmake_minimum_required(VERSION 3.27)
project(Tablas_del_4_y_6)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(calculadora-de-factorial calculadora-de-factorial.cpp)
add_executable(el-numero-es-primo-o-no el-numero-es-primo-o-no.cpp)
add_executable(el-numero-es-par-o-no el-numero-es-par-o-no.cpp)
add_executable(serie-de-fibonacci serie-de-fibonacci.cpp)